# flatmemory

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: benchmarks.yml  integrationtests.yml  unittests.yml
benchmarks/: CMakeLists.txt  bitset.cpp  bitset_builder.cpp  bitset_view.cpp
dependencies/: CMakeLists.txt
dependencies/flatbuffers/: CMakeLists.txt
dev/bench/: data.js
include/flatmemory/: builder.hpp  byte_stream.hpp  byte_stream_segmented.hpp  byte_stream_utils.hpp  flatmemory.hpp  layout.hpp  layout_utils.hpp  type_traits.hpp  types.hpp  view.hpp
include/flatmemory/containers/: unordered_set.hpp  vector.hpp
include/flatmemory/details/: builder.hpp  byte_buffer.hpp  byte_buffer2.hpp  byte_buffer_segmented.hpp  byte_buffer_utils.hpp  byte_stream.hpp  byte_stream_segmented.hpp  byte_stream_utils.hpp  concepts.hpp  flexbuffer_utils.hpp  layout.hpp  layout_utils.hpp  operator.hpp  type_traits.hpp  types.hpp  view.hpp  view_const.hpp
include/flatmemory/details/algorithms/: hash.hpp  murmurhash3.hpp
include/flatmemory/details/containers/: unordered_set.hpp  vector.hpp
include/flatmemory/details/types/: bitset.hpp  bitset2.hpp  declarations.hpp  formatter.hpp  formatter_impl.hpp  optional.hpp  tags.hpp  trivial.hpp  tuple.hpp  tuple2.hpp  typed_tuple.hpp  typed_vector.hpp  variant.hpp  vector.hpp  vector2.hpp
include/flatmemory/types/: bitset.hpp  tuple.hpp  uint16.hpp  uint32.hpp  utils.hpp  vector.hpp
src/: CMakeLists.txt  byte_buffer.cpp  byte_buffer_segmented.cpp
src/details/algorithms/: murmurhash3.cpp
tests/: CMakeLists.txt
tests/containers/: unordered_set.cpp  vector.cpp
tests/integration/: CMakeLists.txt  main.cpp
tests/integration/dependencies/: CMakeLists.txt
tests/types/: bitset.cpp  trivial.cpp  tuple.cpp  uint16.cpp  uint32.cpp  vector.cpp
tests/unit/: CMakeLists.txt
tests/unit/containers/: unordered_set.cpp  vector.cpp
tests/unit/types/: bitset.cpp  bitset2.cpp  optional.cpp  trivial.cpp  tuple.cpp  tuple2.cpp  typed_vector.cpp  vector.cpp  vector2.cpp
